# JOB-20260626153537-000112

./: .coding_prompt.txt  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  alembic.ini  docker-compose.yml  job.json  path  proposal.md  pyproject.toml  pytest.ini  requirements.txt
.planning/: .phase_status.json
.planning/phases/1-project-overview/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/2-technical-stack/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/3-architecture/: -SUMMARY-01.md
.planning/phases/4-data-model/: -SUMMARY-01.md
.planning/phases/5-project-structure/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/6-out-of-scope/: -SUMMARY-01.md  PLAN-01.md
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep
app/: __init__.py  auth.py  config.py  database.py  db.py  main.py  s3.py
app/api/: __init__.py  health.py  items.py  upload.py
app/api/v1/: __init__.py  health.py  router.py
app/models/: __init__.py  entities.py
app/schemas/: __init__.py
docs/: architecture.md  data-model.md  deployment.md
infra/: cdk_app.py
lambdas/: __init__.py  layer_requirements.txt
lambdas/etl_parser/: __init__.py  handler.py
lambdas/etl_parser/parsers/: __init__.py  csv_parser.py  pdf_parser.py  xlsx_parser.py
lambdas/webhook_monday/: __init__.py  client.py  handler.py
tests/: conftest.py  test_auth.py  test_etl_parser.py  test_items_api.py
