[tool.poetry]
name = "serverless-data-platform"
version = "1.0.0"
description = "Reference implementation of a serverless data platform on AWS (Lambda, DynamoDB, S3, Cognito, CDK)."
authors = ["Platform Team <platform@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "lambdas" },
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.46"
botocore = "^1.34.46"
fastapi = "^0.115.0"
mangum = "^0.17.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
PyJWT = "^2.8.0"
requests = "^2.31.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
pdfplumber = "^0.10.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-cov = "^5.0.0"
moto = {extras = ["s3", "dynamodb", "sqs"], version = "^5.0.0"}
freezegun = "^1.4.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true